--- a/src/main/resources/templates/mqtt/main.html
+++ b/src/main/resources/templates/mqtt/main.html
@@ -62,7 +62,8 @@
 <body>
 <div id="head-title">TKE Monitoring & Controlling System</div>
 <div class="container" id="elevator-panel">
-    <input id="messages" readonly>
+<!--    <input id="messages" readonly>-->
+    <div id="messages"></div>
 
     <div class="table-responsive">
         <h3 class="card-title my-4">Elevator Status:</h3>
