--- a/src/main/resources/templates/user/admin/password.html
+++ b/src/main/resources/templates/user/admin/password.html
@@ -15,7 +15,7 @@
         <div th:replace="fragments/message :: div"></div>
 
         <!-- Change Password Form -->
-        <form th:action="@{/user/password}" method="post" class="form">
+        <form th:action="@{/admin/user/password}" method="post" class="form">
             <div class="form-group">
                 <label class="control-label">Current Password:</label>
                 <input type="password" name="oldPass" class="form-control" required="required">
