--- a/src/main/resources/templates/user/users.html
+++ b/src/main/resources/templates/user/users.html
@@ -31,12 +31,13 @@
                 <td>
                     <form method="POST" th:action="@{/user/update-role/{id}(id=${user.userId})}" class="mt-n1">
                         <div class="d-flex align-items-center">
-                            <select class="form-control" name="newRole">
-                                <option selected disabled>Choose...</option>
-                                <option value="USER" th:text="USER" th:selected="${user.role == 'USER'}"></option>
-                                <option value="MANAGER" th:text="MANAGER" th:selected="${user.role == 'MANAGER'}"></option>
-                            </select>
-                            <button class="btn btn-primary ml-3" type="submit" name="userId" th:value="${user.userId}">Save</button>
+<!--                            <select class="form-control" name="newRole">-->
+<!--                                <option selected disabled>Choose...</option>-->
+<!--                                <option value="USER" th:text="USER" th:selected="${user.role == 'USER'}"></option>-->
+<!--                                <option value="MANAGER" th:text="MANAGER" th:selected="${user.role == 'MANAGER'}"></option>-->
+<!--                            </select>-->
+<!--                            <button class="btn btn-primary ml-3" type="submit" name="userId" th:value="${user.userId}">Save</button>-->
+                            <button class="btn btn-primary ml-3" type="submit" name="userId" th:value="${user.userId}">Reset Password (Not Done)</button>
                         </div>
                     </form>
 
