--- a/src/main/resources/templates/user/add.html
+++ b/src/main/resources/templates/user/add.html
@@ -20,17 +20,17 @@
                 </div>
                 <div class="form-group">
                     <label for="password">Password:</label>
-                    <input class="form-control" id="password" name="password" required value="Soict@2023">
+                    <input class="form-control" id="password" name="password" required value="Hanoi123">
                 </div>
 
 
-                <div class="form-group">
-                    <label for="role">Role:</label>
-                    <select class="form-control" id="role" name="role" required>
-                        <option value="USER">USER</option>
-                        <option value="MANAGER">MANAGER</option>
-                    </select>
-                </div>
+<!--                <div class="form-group">-->
+<!--                    <label for="role">Role:</label>-->
+<!--                    <select class="form-control" id="role" name="role" required>-->
+<!--                        <option value="USER">USER</option>-->
+<!--                        <option value="MANAGER">MANAGER</option>-->
+<!--                    </select>-->
+<!--                </div>-->
                 <button type="submit" class="btn btn-success">Add User</button>
             </form>
 
