--- a/src/main/resources/templates/user/admin/add.html
+++ b/src/main/resources/templates/user/admin/add.html
@@ -13,14 +13,14 @@
         <div class="col-md-6 offset-md-3">
             <h1>Add User</h1>
             <div th:replace="fragments/message :: div"></div>
-            <form method="POST" th:action="@{add}">
+            <form method="POST" th:action="@{/admin/user/add}">
                 <div class="form-group">
                     <label for="username">Username:</label>
                     <input type="text" class="form-control" id="username" name="username" required>
                 </div>
                 <div class="form-group">
                     <label for="password">Password:</label>
-                    <input class="form-control" id="password" name="password" required value="Soict@2023">
+                    <input class="form-control" id="password" name="password" required value="Hanoi123">
                 </div>
 
 
@@ -35,7 +35,7 @@
             </form>
 
             <div class="mt-3">
-                <a href="/user" class="btn btn-secondary">Back to User List</a>
+                <a href="/admin/user" class="btn btn-secondary">Back to User List</a>
             </div>
         </div>
     </div>
