--- a/src/main/resources/templates/area/findById.html
+++ b/src/main/resources/templates/area/findById.html
@@ -38,7 +38,7 @@
                         <div class="col-md-4" th:each="elevator : ${elevators}">
                             <div class="card mb-3">
                                 <div class="card-header">
-                                    <h6 th:text="${elevator.code}"></h6>
+                                    <h6 th:text="${elevator.name}"></h6>
                                 </div>
                                 <div class="card-body">
                                     <p>Number of Floors: <span th:text="${elevator.numFloors}"></span></p>
