--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -19,7 +19,7 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5">
     <div class="container">
-      <a class="navbar-brand ml-4" href="#">Project Management</a>
+      <a class="navbar-brand ml-4" href="#">TKE Monitoring & Controlling System</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
               aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -27,21 +27,27 @@
 
       <div class="collapse navbar-collapse justify-content-end mr-4" id="navbarNav">
         <ul class="navbar-nav">
+<!--          <li class="nav-item ml-auto">-->
+<!--            <a class="nav-link navbar-text" th:href="@{/noti/{userId}(userId=${userId})}">Notification</a>-->
+<!--          </li>-->
+<!--          <li class="nav-item ml-auto">-->
+<!--            <a th:if="${role == 'ADMIN'}" class="nav-link navbar-text" href="/user">Users</a>-->
+<!--          </li>-->
+<!--          <li class="nav-item ml-auto">-->
+<!--            <a th:if="${role == 'MANAGER'}" class="nav-link navbar-text" href="/project">Project</a>-->
+<!--          </li>-->
+<!--          <li class="nav-item ml-auto">-->
+<!--            <a th:if="${role == 'MANAGER'}" class="nav-link navbar-text" href="/task/upcoming-days">Upcoming Tasks</a>-->
+<!--          </li>-->
+
+<!--          <li class="nav-item ml-auto">-->
+<!--            <a th:if="${role == 'MANAGER'}" class="nav-link navbar-text" href="/analysis">Analysis</a>-->
+<!--          </li>-->
           <li class="nav-item ml-auto">
-            <a class="nav-link navbar-text" th:href="@{/noti/{userId}(userId=${userId})}">Notification</a>
+            <a class="nav-link navbar-text" href="/user">Users</a>
           </li>
           <li class="nav-item ml-auto">
-            <a th:if="${role == 'ADMIN'}" class="nav-link navbar-text" href="/user">Users</a>
-          </li>
-          <li class="nav-item ml-auto">
-            <a th:if="${role == 'MANAGER'}" class="nav-link navbar-text" href="/project">Project</a>
-          </li>
-          <li class="nav-item ml-auto">
-            <a th:if="${role == 'MANAGER'}" class="nav-link navbar-text" href="/task/upcoming-days">Upcoming Tasks</a>
-          </li>
-
-          <li class="nav-item ml-auto">
-            <a th:if="${role == 'MANAGER'}" class="nav-link navbar-text" href="/analysis">Analysis</a>
+            <a class="nav-link navbar-text" href="/building/1">Building</a>
           </li>
 
 
@@ -49,12 +55,12 @@
 
 
 
-          <li class="nav-item ml-auto">
-            <a th:if="${role == 'USER'}" class="nav-link navbar-text" th:href="@{/version/user/{userId}(userId=${userId})}">Project</a>
-          </li>
-          <li class="nav-item ml-auto">
-            <a th:if="${role == 'USER'}" class="nav-link navbar-text" th:href="@{/task/user/{userId}(userId=${userId})}">My Tasks</a>
-          </li>
+<!--          <li class="nav-item ml-auto">-->
+<!--            <a th:if="${role == 'USER'}" class="nav-link navbar-text" th:href="@{/version/user/{userId}(userId=${userId})}">Project</a>-->
+<!--          </li>-->
+<!--          <li class="nav-item ml-auto">-->
+<!--            <a th:if="${role == 'USER'}" class="nav-link navbar-text" th:href="@{/task/user/{userId}(userId=${userId})}">My Tasks</a>-->
+<!--          </li>-->
           <li class="nav-item">
             <a class="nav-link" href="/user/password">Password</a>
           </li>
