--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -49,6 +49,9 @@
           <li class="nav-item ml-auto">
             <a class="nav-link navbar-text" href="/building/1">Building</a>
           </li>
+            <li class="nav-item ml-auto">
+                <a class="nav-link navbar-text" href="/permission">Permission</a>
+            </li>
 
 
 
