--- a/src/main/resources/templates/userarea/permission.html
+++ b/src/main/resources/templates/userarea/permission.html
@@ -22,6 +22,7 @@
     </style>
 </head>
 <body>
+<div th:replace="fragments/header :: header"></div>
 <div class="container mt-5">
     <h2>Manage Permissions</h2>
     <div class="row">
@@ -36,21 +37,21 @@
                             <div class="attendee-section">
                                 <span>Attendee: </span>
                                 <span th:each="userArea : ${userAreas}" th:if="${userArea.area.id == area.id}">
-                                    <span th:text="${userArea.user.username}" class="font-weight-bold"></span><span>, </span>
+                                    <span th:text="${userArea.user.username}" class="font-weight-bold"></span><span>  </span>
                                 </span>
                             </div>
                             <form th:action="@{/user-area/permission/delete}" method="post">
                                 <input type="hidden" name="areaId" th:value="${area.id}">
                                 <div class="input-group mb-3">
                                     <div class="input-group-prepend">
-                                        <label class="input-group-text" for="userDropdown">Select User</label>
+                                        <label class="input-group-text" for="userDropdownDelete">Select User</label>
                                     </div>
-                                    <select class="custom-select" id="userDropdown" name="userId">
+                                    <select class="custom-select" id="userDropdownDelete" name="userId">
                                         <option selected disabled>Choose...</option>
-                                        <option th:each="user : ${users}" th:value="${user.userId}" th:text="${user.username}"></option>
+                                        <option th:each="userArea : ${userAreas}" th:if="${userArea.area.id == area.id}" th:value="${userArea.user.userId}" th:text="${userArea.user.username}"></option>
                                     </select>
                                     <div class="input-group-append">
-                                        <button type="submit" class="btn btn-danger">Delete From Area</button>
+                                        <button type="submit" class="btn btn-danger">Delete Permission</button>
                                     </div>
                                 </div>
                             </form>
@@ -58,17 +59,20 @@
                                 <input type="hidden" name="areaId" th:value="${area.id}">
                                 <div class="input-group mb-3">
                                     <div class="input-group-prepend">
-                                        <label class="input-group-text" for="userDropdown">Select User</label>
+                                        <label class="input-group-text" for="userDropdownAdd">Select User</label>
                                     </div>
-                                    <select class="custom-select" id="userDropdown" name="userId">
+                                    <select class="custom-select" id="userDropdownAdd" name="userId">
                                         <option selected disabled>Choose...</option>
-                                        <option th:each="user : ${users}" th:value="${user.userId}" th:text="${user.username}"></option>
+                                        <th:block th:each="user : ${users}">
+                                            <option th:value="${user.userId}" th:text="${user.username}"></option>
+                                        </th:block>
                                     </select>
                                     <div class="input-group-append">
-                                        <button type="submit" class="btn btn-primary">Add User</button>
+                                        <button type="submit" class="btn btn-primary">Add Permission</button>
                                     </div>
                                 </div>
                             </form>
+
                         </div>
                     </div>
                 </div>
