--- a/src/main/resources/templates/userarea/permission.html
+++ b/src/main/resources/templates/userarea/permission.html
@@ -49,7 +49,7 @@
                                             <label class="input-group-text" for="userDropdownDelete">Select User</label>
                                         </div>
                                         <select class="custom-select" id="userDropdownDelete" name="userAreaId">
-                                            <option selected disabled>Choose...</option>
+<!--                                            <option selected disabled>Choose...</option>-->
                                             <option th:each="userArea : ${userAreas}" th:if="${userArea.area.id == area.id}" th:value="${userArea.id}" th:text="${userArea.user.username}"></option>
                                         </select>
                                         <div class="input-group-append">
@@ -67,7 +67,7 @@
                                             <label class="input-group-text" for="userDropdownAdd">Select User</label>
                                         </div>
                                         <select class="custom-select" id="userDropdownAdd" name="userId">
-                                            <option selected disabled>Choose...</option>
+<!--                                            <option selected disabled>Choose...</option>-->
                                             <option th:each="user : ${users}" th:value="${user.userId}" th:text="${user.username}"></option>
                                         </select>
                                         <input type="hidden" name="areaId" th:value="${area.id}" />
