--- a/src/main/resources/templates/area/findById.html
+++ b/src/main/resources/templates/area/findById.html
@@ -3,6 +3,10 @@
 <head>
     <title>Area Details</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10">
+    <script th:src="@{../static/js/DeleteConfirmation.js}" type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <!-- Your other stylesheets and scripts -->
 </head>
 <body>
@@ -21,11 +25,13 @@
             <p th:text="${area.description}"></p>
 
             <!-- Action Buttons for Area -->
-            <div class="mt-3">
-                <a class="btn btn-danger mr-2" th:href="@{/area/{areaId}/delete(areaId=${area.id})}">Delete Area</a>
-                <a class="btn btn-primary mr-2" th:href="@{/area/{areaId}/edit(areaId=${area.id})}">Update Area</a>
-                <a class="btn btn-success" th:href="@{/area/{areaId}/add-elevator(areaId=${area.id})}">Add Elevator</a>
-            </div>
+                <div class="mt-3 d-flex">
+                    <form method="POST" th:action="@{/area/delete/{id}(id=${area.id})}" onsubmit="return confirmDelete(event)">
+                        <button class="btn btn-danger mr-2" type="submit" name="areaId" th:value="${area.id}">Delete</button>
+                    </form>
+                    <a class="btn btn-primary mr-2" th:href="@{/area/{areaId}/edit(areaId=${area.id})}">Update Area</a>
+                    <a class="btn btn-success" th:href="@{/area/{areaId}/add-elevator(areaId=${area.id})}">Add Elevator</a>
+                </div>
 
             <!-- Elevator Information -->
             <div class="card mt-3">
@@ -43,9 +49,13 @@
                                 <div class="card-body">
                                     <p>Number of Floors: <span th:text="${elevator.numFloors}"></span></p>
                                     <!-- Add Get Info Button -->
-                                    <a class="btn btn-primary btn-sm" th:href="@{/elevator/{elevatorId}(elevatorId=${elevator.id})}">Get Info</a>
+                                    <div class="d-flex">
+                                    <a class="btn btn-primary mr-2" th:href="@{/elevator/{elevatorId}(elevatorId=${elevator.id})}">Get Info</a>
                                     <!-- Add Delete Elevator Button -->
-                                    <a class="btn btn-danger btn-sm" th:href="@{/elevator/{elevatorId}/delete(elevatorId=${elevator.id})}">Delete</a>
+                                    <form method="POST" th:action="@{/elevator/delete/{id}(id=${elevator.id})}" onsubmit="return confirmDelete(event)">
+                                        <button class="btn btn-danger" type="submit" name="elevatorId" th:value="${elevator.id}">Delete</button>
+                                    </form>
+                                    </div>
                                 </div>
                             </div>
                         </div>
