--- a/src/main/resources/templates/user/users.html
+++ b/src/main/resources/templates/user/users.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10">
     <script th:src="@{../static/js/DeleteConfirmation.js}" type="text/javascript"></script>
+    <script th:src="@{../static/js/ResetPassword.js}" type="text/javascript"></script>
 </head>
 <body>
 <div th:replace="fragments/header :: header"></div>
@@ -13,14 +14,14 @@
     <div class="container">
         <h2 class="mb-3">User List</h2>
         <div th:replace="fragments/message :: div"></div>
-        <table class="table">
+        <table class="table text-center">
             <thead>
             <tr>
                 <th>User ID</th>
                 <th>Username</th>
                 <th>Role</th>
-                <th>Change Role</th>
-                <th>Action</th>
+                <th>Reset Password</th>
+                <th>Delete</th>
             </tr>
             </thead>
             <tbody>
@@ -29,22 +30,14 @@
                 <td th:text="${user.username}"></td>
                 <td th:text="${user.role}"></td>
                 <td>
-                    <form method="POST" th:action="@{/user/update-role/{id}(id=${user.userId})}" class="mt-n1">
-                        <div class="d-flex align-items-center">
-<!--                            <select class="form-control" name="newRole">-->
-<!--                                <option selected disabled>Choose...</option>-->
-<!--                                <option value="USER" th:text="USER" th:selected="${user.role == 'USER'}"></option>-->
-<!--                                <option value="MANAGER" th:text="MANAGER" th:selected="${user.role == 'MANAGER'}"></option>-->
-<!--                            </select>-->
-<!--                            <button class="btn btn-primary ml-3" type="submit" name="userId" th:value="${user.userId}">Save</button>-->
-                            <button class="btn btn-primary ml-3" type="submit" name="userId" th:value="${user.userId}">Reset Password (Not Done)</button>
-                        </div>
+                    <form method="POST" th:action="@{/user/{userId}/reset-password(userId=${user.userId})}" onsubmit="return confirmResetPassword(event)">
+                        <button class="btn btn-primary mr-2" type="submit">Reset Password</button>
                     </form>
 
                 </td>
                 <td>
                     <form method="POST" th:action="@{/user/deactivate/{id}(id=${user.userId})}" onsubmit="return confirmDelete(event)">
-                        <button class="btn btn-danger mt-n1" type="submit" name="userId" th:value="${user.userId}">Delete</button>
+                        <button class="btn btn-danger" type="submit" name="userId" th:value="${user.userId}">Delete</button>
                     </form>
 
                 </td>
