--- a/src/main/resources/templates/elevator/elevator.html
+++ b/src/main/resources/templates/elevator/elevator.html
@@ -16,6 +16,8 @@
     <script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.min.js}"
             type="text/javascript"></script>
 
+    <script th:src="@{../static/js/ElevatorNavigator.js}" type="text/javascript"></script>
+
     <style>
         #elevator-panel {
             max-width: 80vw;
@@ -106,14 +108,14 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4">
-                <h3 class="card-title my-4">Elevator Info:</h3>
+                <h3 class="card-title">Elevator Info:</h3>
                 <div class="card">
                     <div class="card-body">
                         <div class="text-start mb-3">
                             Elevator: <input id="elevator" class="input-info" name="elevator" readonly th:value="${elevator.name}">
                         </div>
                         <div class="text-start mb-3">
-                            Number of Floors: <input class="input-info" id="numFloors" name="elevator" readonly th:value="${elevator.numFloors}">
+                            Floors: <input class="input-info" id="numFloors" name="elevator" readonly th:value="${elevator.numFloors}">
                         </div>
                         <div class="text-start mb-3">
                             Status: <input id="connectStatus" class="input-info" name="connectStatus" readonly value="Disconnected">
@@ -523,8 +525,6 @@
 <script crossorigin="anonymous"
         integrity="sha384-J2mPPkJBQ4F4mxV4U5vAvIVBQUm8XjU2zy9/L6zcj5zvq/x+EnoO5k3hcl9vmssF"
         src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js"></script>
-<script crossorigin="anonymous"
-        integrity="sha384-4mu2QhoFx5z5Pe8CQz1efSaNFEtPFTj7Jz6nH6RtAgFytl/MpP6v7/N+dIS6Pz6V"
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </body>
 </html>
