--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -44,13 +44,13 @@
 <!--            <a th:if="${role == 'MANAGER'}" class="nav-link navbar-text" href="/analysis">Analysis</a>-->
 <!--          </li>-->
           <li class="nav-item ml-auto">
-            <a class="nav-link navbar-text" href="/user">Users</a>
+            <a th:if="${role == 'ADMIN' || role == 'MANAGER'}" class="nav-link navbar-text" href="/user">Users</a>
           </li>
           <li class="nav-item ml-auto">
             <a class="nav-link navbar-text" href="/building/1">Building</a>
           </li>
             <li class="nav-item ml-auto">
-                <a class="nav-link navbar-text" href="/permission">Permission</a>
+                <a th:if="${role == 'ADMIN' || role == 'MANAGER'}" class="nav-link navbar-text" href="/permission">Permission</a>
             </li>
 
 
