--- a/src/main/resources/templates/user/admin/add.html
+++ b/src/main/resources/templates/user/admin/add.html
@@ -20,7 +20,7 @@
                 </div>
                 <div class="form-group">
                     <label for="password">Password:</label>
-                    <input class="form-control" id="password" name="password" required value="Hanoi123">
+                    <input class="form-control" id="password" name="password" required value="tke@123">
                 </div>
 
 
