--- a/src/main/resources/templates/elevator/elevator.html
+++ b/src/main/resources/templates/elevator/elevator.html
@@ -17,7 +17,7 @@
             type="text/javascript"></script>
 
     <script th:src="@{../static/js/ElevatorNavigator.js}" type="text/javascript"></script>
-
+    <script src="../static/js/ElevatorNavigator.js" type="text/javascript"></script>
     <style>
         #elevator-panel {
             max-width: 80vw;
@@ -93,7 +93,7 @@
             <tbody>
             <tr>
                 <td><input id="display" name="display" readonly type="text" value="1"></td>
-                <td><input id="direction" name="direction" readonly type="text" value="↑"></td>
+                <td><input id="direction" name="direction" readonly type="text" value="▲"></td>
                 <td><input id="onoff" name="onoff" readonly type="text" value="ON"></td>
                 <td>
 <!--                    <input id="doorstatus" name="doorstatus" readonly type="text" value="Open">-->
