--- a/src/main/resources/templates/building/edit.html
+++ b/src/main/resources/templates/building/edit.html
@@ -18,8 +18,18 @@
             <input type="text" class="form-control" id="name" name="name" th:value="${building.name}" required>
         </div>
         <div class="form-group">
-            <label for="description">Description:</label>
-            <textarea class="form-control" id="description" name="description" rows="3" th:text="${building.description}"></textarea>
+            <label for="country">Country:</label>
+            <select class="form-control" id="country" name="country">
+                <option value="VN" th:selected="${building.country == 'VN'}">VN</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="city">City:</label>
+            <input type="text" class="form-control" id="city" name="city" th:value="${building.city}">
+        </div>
+        <div class="form-group">
+            <label for="note">Note:</label>
+            <textarea class="form-control" id="note" name="note" rows="3" th:text="${building.note}"></textarea>
         </div>
         <button type="submit" class="btn btn-primary">Save</button>
         <a class="btn btn-secondary" th:href="@{/building/{buildingId}(buildingId=${building.id})}">Back</a>
