--- a/src/main/resources/templates/elevator/elevator.html
+++ b/src/main/resources/templates/elevator/elevator.html
@@ -72,6 +72,31 @@
 
 <div class="container" id="elevator-panel"style="margin-top: 0; padding-top: 0;">
 <!--    <input id="messages" readonly>-->
+
+
+    <div class="row">
+        <div class="col-md-3">
+            <div class="bg-dark text-white p-2 mb-2">Item Selected</div>
+        </div>
+        <div class="col-md-3">
+            <div class="bg-danger text-white p-2 mb-2 d-flex justify-content-between align-items-center">
+                Timelife Door | <span class="arrow">&#9658;</span>
+                <div class="bg-danger text-white px-2 rounded">100,000</div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-3">
+            <div class="bg-dark text-white p-2 mb-2">Ref Value</div>
+        </div>
+        <div class="col-md-3">
+            <div class="bg-success text-white p-2 mb-2 d-flex justify-content-between align-items-center">
+                80,000 <span class="arrow">&#9658;</span>
+            </div>
+        </div>
+    </div>
+
+
     <div class="row">
         <div class="col text-center">
             <h1>Elevator Controlling</h1>
@@ -207,6 +232,7 @@
                 </div>
             </div>
         </div>
+
 
     </div>
     <div class="text-end">
