--- a/src/main/resources/templates/elevator/elevator.html
+++ b/src/main/resources/templates/elevator/elevator.html
@@ -17,6 +17,8 @@
             type="text/javascript"></script>
 
     <script th:src="@{../static/js/ElevatorNavigator.js}" type="text/javascript"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="/static/js/AlertError.js" type="text/javascript"></script>
     <script src="../static/js/ElevatorNavigator.js" type="text/javascript"></script>
     <style>
         #elevator-panel {
@@ -66,6 +68,25 @@
             text-align: left;
         }
     </style>
+    <style>
+        .table-custom {
+            border-collapse: separate;
+            border-spacing: 10px;
+        }
+        .table-custom td {
+            padding: 10px;
+            border-radius: 5px;
+            font-weight: bold;
+            text-align: center;
+        }
+        .arrow {
+            font-size: 20px;
+            cursor: pointer;
+        }
+        .btn-call{
+            width: 150px;
+        }
+    </style>
 </head>
 <body>
 <div th:replace="fragments/header :: header"></div>
@@ -74,27 +95,27 @@
 <!--    <input id="messages" readonly>-->
 
 
-    <div class="row">
-        <div class="col-md-3">
-            <div class="bg-dark text-white p-2 mb-2">Item Selected</div>
-        </div>
-        <div class="col-md-3">
-            <div class="bg-danger text-white p-2 mb-2 d-flex justify-content-between align-items-center">
-                Timelife Door | <span class="arrow">&#9658;</span>
-                <div class="bg-danger text-white px-2 rounded">100,000</div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-3">
-            <div class="bg-dark text-white p-2 mb-2">Ref Value</div>
-        </div>
-        <div class="col-md-3">
-            <div class="bg-success text-white p-2 mb-2 d-flex justify-content-between align-items-center">
-                80,000 <span class="arrow">&#9658;</span>
-            </div>
-        </div>
-    </div>
+<!--    <div class="row">-->
+<!--        <div class="col-md-3">-->
+<!--            <div class="bg-dark text-white p-2 mb-2">Item Selected</div>-->
+<!--        </div>-->
+<!--        <div class="col-md-3">-->
+<!--            <div class="bg-danger text-white p-2 mb-2 d-flex justify-content-between align-items-center">-->
+<!--                Timelife Door | <span class="arrow">&#9658;</span>-->
+<!--                <div class="bg-danger text-white px-2 rounded">100,000</div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    <div class="row">-->
+<!--        <div class="col-md-3">-->
+<!--            <div class="bg-dark text-white p-2 mb-2">Ref Value</div>-->
+<!--        </div>-->
+<!--        <div class="col-md-3">-->
+<!--            <div class="bg-success text-white p-2 mb-2 d-flex justify-content-between align-items-center">-->
+<!--                80,000 <span class="arrow">&#9658;</span>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
 
 
     <div class="row">
@@ -102,6 +123,7 @@
             <h1>Elevator Controlling</h1>
         </div>
     </div>
+
     <div class="table-responsive">
         <h3 class="card-title my-4">Elevator Status:</h3>
         <table class="table table-bordered text-center">
@@ -180,7 +202,7 @@
                                     </td>
 
                                     <td class="text-center">
-                                        <button class="btn btn-secondary btn-lg float-center" onclick="callupClick()"
+                                        <button class="btn btn-secondary btn-lg float-center btn-call" onclick="callupClick()"
                                                 type="button"> Call Up
                                         </button>
                                     </td>
@@ -195,7 +217,7 @@
                                     </td>
 
                                     <td class="text-center">
-                                        <button class="btn btn-secondary btn-lg float-center" onclick="calldnClick()"
+                                        <button class="btn btn-secondary btn-lg float-center btn-call" onclick="calldnClick()"
                                                 type="button">Call Down
                                         </button>
                                     </td>
@@ -210,7 +232,7 @@
                                     </td>
 
                                     <td class="text-center">
-                                        <button class="btn btn-primary btn-lg float-center" onclick="carcallClick()"
+                                        <button class="btn btn-secondary btn-lg float-center btn-call" onclick="carcallClick()"
                                                 type="button"> Car Call
                                         </button>
                                     </td>
@@ -234,6 +256,29 @@
         </div>
 
 
+
+        <table class="table-custom">
+            <tr>
+                <td class="bg-dark text-white">Item Selected</td>
+                <td class="bg-danger text-white d-flex justify-content-between align-items-center">
+                    Timelife Door | <span class="arrow">&#9658;</span>
+                    <span class="bg-white text-danger rounded px-2">100,000</span>
+                </td>
+            </tr>
+            <tr>
+                <td class="bg-dark text-white">Ref Value</td>
+                <td class="bg-danger text-white"></td>
+            </tr>
+            <tr>
+                <td class="bg-dark text-white">Now Value</td>
+                <td class="bg-success text-white d-flex justify-content-between align-items-center">
+                    80,000 <span class="arrow">&#9658;</span>
+                </td>
+            </tr>
+        </table>
+
+
+
     </div>
     <div class="text-end">
         <a class="btn btn-secondary" th:href="@{/area/{areaid}(areaid=${elevator.areaId})}">
@@ -245,7 +290,7 @@
     var host = 'tkevn.ddns.net';
     var port = 8001;
     var useTLS = false;
-    var username = "user1";
+    var username = "user1a";
     var password = "minh";
     cleansession = true;
     var mqtt;
@@ -279,10 +324,13 @@
             cleanSession: cleansession,
             onSuccess: onConnect,
             onFailure: function (message) {
-                $('#messages').val("Connection failed: " + message.errorMessage + "Retrying");
+                alertError("Connection failed ... Retrying");
                 setTimeout(MQTTconnect, reconnectTimeout);
             }
         };
+
+
+                // alertError("Connected failed: " + message.errorMessage + "Retrying")
 
         mqtt.onConnectionLost = onConnectionLost;
         mqtt.onMessageArrived = onMessageArrived;
@@ -489,7 +537,7 @@
 
         var value = parseInt(msg);
         if (isNaN(value) || value < 0 || value > numFloors) {
-            alert('Invalid Floor Number');
+            alertError("Invalid Floor Number")
             return;
         }
 
@@ -504,8 +552,8 @@
         var topic = elevator + "/" + "callup";
 
         var value = parseInt(msg);
-        if (isNaN(value) || value < 0 || value > numFloors){
-            alert('Invalid Floor Number');
+        if (isNaN(value) || value < 0 || value > numFloors) {
+            alertError("Invalid Floor Number")
             return;
         }
 
@@ -521,7 +569,7 @@
 
         var value = parseInt(msg);
         if (isNaN(value) || value < 0 || value > numFloors) {
-            alert('Invalid Floor Number');
+            alertError("Invalid Floor Number")
             return;
         }
 
@@ -531,18 +579,18 @@
         document.getElementById("messages").innerHTML += "<span> Message to topic " + topic + " with value = " + msg + " is sent </span><br>";
     }
 
-    document.addEventListener('DOMContentLoaded', function() {
-        var inputFloorNums = document.getElementById('input-floor-nums');
-
-        inputFloorNums.addEventListener('input', function() {
-            var value = parseInt(inputFloorNums.value);
-
-            if (isNaN(value) || value > 50) {
-                inputFloorNums.value = '';
-                alert('Vui lòng nhập số không vượt quá 50');
-            }
-        });
-    });
+    // document.addEventListener('DOMContentLoaded', function() {
+    //     var inputFloorNums = document.getElementById('input-floor-nums');
+    //
+    //     inputFloorNums.addEventListener('input', function() {
+    //         var value = parseInt(inputFloorNums.value);
+    //
+    //         if (isNaN(value) || value > 50) {
+    //             inputFloorNums.value = '';
+    //             alertError("Invalid Floor Number")
+    //         }
+    //     });
+    // });
 
 </script>
 <script crossorigin="anonymous"
